--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "angular": "^1.5.7",
     "bootstrap": "^3.3.6",
-    "ejs": "^1.0.0"
+    "ejs": "^1.0.0",
+    "angular-ui-router": "^0.3.1"
   }
 }
