--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "postinstall": "bower i"
+    "postinstall": "bower i && gulp build"
   },
   "engines": {
     "node": "v6.2.1"
